--- a/HyuJokbo/HyuJokbo/JokboTabStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabStoryboard.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Lx5-mx-UOa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Lx5-mx-UOa">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="59"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ewn-x8-48O" id="bHI-Pi-J04">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="58.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="유민수 교수님" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQJ-L6-GcX" userLabel="Professor">
@@ -201,7 +201,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="63"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8yv-Av-Bq0" id="uwA-Mq-o3X">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="62.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="소프트웨어 스튜디오" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KzR-6o-OFE">
@@ -337,7 +337,7 @@
                                 <rect key="frame" x="0.0" y="91" width="320" height="500"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vnv-B4-TO0" id="r4s-IE-yjL">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="499.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="499"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cR4-a4-wec">
@@ -422,56 +422,46 @@
                                             </connections>
                                         </button>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" image="loading-icon-1" translatesAutoresizingMaskIntoConstraints="NO" id="MQR-ay-0uQ">
-                                            <rect key="frame" x="130" y="58" width="60" height="60"/>
+                                            <rect key="frame" x="130" y="128" width="60" height="60"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="60" id="OSf-VR-gWl"/>
                                                 <constraint firstAttribute="width" constant="60" id="PT5-ca-hTF"/>
                                             </constraints>
                                         </imageView>
                                         <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="kDF-P6-HUM">
-                                            <rect key="frame" x="141" y="381" width="39" height="37"/>
+                                            <rect key="frame" x="141" y="376" width="39" height="37"/>
+                                            <color key="tintColor" red="0.23529411759999999" green="0.37254901959999998" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="37" id="OOD-x5-K2G"/>
                                                 <constraint firstAttribute="width" constant="39" id="XfT-MI-hhO"/>
                                             </constraints>
                                             <color key="pageIndicatorTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                            <color key="currentPageIndicatorTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="currentPageIndicatorTintColor" red="0.23529411759999999" green="0.37254901959999998" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
                                         </pageControl>
                                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xy1-px-I1i">
                                             <rect key="frame" x="8" y="0.0" width="300" height="363"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </scrollView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75J-Ol-sUo">
-                                            <rect key="frame" x="130" y="58" width="60" height="60"/>
-                                            <state key="normal" title="refresh"/>
-                                            <connections>
-                                                <action selector="refreshBtn:" destination="16k-la-qsF" eventType="touchUpInside" id="s5B-53-YDR"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="g28-Uf-BVs" firstAttribute="centerX" secondItem="tIy-lJ-Mvo" secondAttribute="centerX" id="14S-kv-oL5"/>
                                         <constraint firstItem="kDF-P6-HUM" firstAttribute="centerX" secondItem="r4s-IE-yjL" secondAttribute="centerX" id="1Qf-dO-M7b"/>
-                                        <constraint firstItem="MQR-ay-0uQ" firstAttribute="top" secondItem="r4s-IE-yjL" secondAttribute="topMargin" constant="50" id="1f9-Zr-NK3"/>
+                                        <constraint firstItem="MQR-ay-0uQ" firstAttribute="top" secondItem="r4s-IE-yjL" secondAttribute="topMargin" constant="120" id="1f9-Zr-NK3"/>
                                         <constraint firstItem="kjd-Ig-BJ1" firstAttribute="leading" secondItem="r4s-IE-yjL" secondAttribute="leadingMargin" constant="5" id="2tN-Yt-MHN"/>
-                                        <constraint firstItem="75J-Ol-sUo" firstAttribute="top" secondItem="MQR-ay-0uQ" secondAttribute="top" id="7Hk-kd-xJK"/>
                                         <constraint firstItem="cR4-a4-wec" firstAttribute="leading" secondItem="r4s-IE-yjL" secondAttribute="leadingMargin" constant="5" id="8r0-Nd-viw"/>
                                         <constraint firstItem="uOM-k4-WKm" firstAttribute="leading" secondItem="uq2-ie-tRr" secondAttribute="leading" id="EVv-qW-ULg"/>
-                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="kDF-P6-HUM" secondAttribute="bottom" constant="10" id="GV9-No-2xq"/>
-                                        <constraint firstItem="75J-Ol-sUo" firstAttribute="leading" secondItem="MQR-ay-0uQ" secondAttribute="leading" id="GiO-Qv-3Ee"/>
+                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="kDF-P6-HUM" secondAttribute="bottom" constant="15" id="GV9-No-2xq"/>
                                         <constraint firstItem="g28-Uf-BVs" firstAttribute="top" secondItem="cR4-a4-wec" secondAttribute="bottom" constant="17" id="IUi-2u-oOG"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="tIy-lJ-Mvo" secondAttribute="bottom" id="LKL-Xq-uwp"/>
                                         <constraint firstItem="uq2-ie-tRr" firstAttribute="centerY" secondItem="g28-Uf-BVs" secondAttribute="centerY" id="NFT-pB-B1K"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="uq2-ie-tRr" secondAttribute="trailing" id="Nog-PA-2PS"/>
                                         <constraint firstItem="Zg9-lE-doa" firstAttribute="leading" secondItem="kjd-Ig-BJ1" secondAttribute="trailing" constant="1" id="PGV-ns-NO9"/>
                                         <constraint firstItem="uq2-ie-tRr" firstAttribute="leading" secondItem="g28-Uf-BVs" secondAttribute="trailing" constant="1" id="SNk-is-epe"/>
-                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="MQR-ay-0uQ" secondAttribute="bottom" constant="310" id="V7P-rn-21F"/>
+                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="MQR-ay-0uQ" secondAttribute="bottom" constant="240" id="V7P-rn-21F"/>
                                         <constraint firstItem="kjd-Ig-BJ1" firstAttribute="centerY" secondItem="tIy-lJ-Mvo" secondAttribute="centerY" id="Z3L-vb-p5G"/>
                                         <constraint firstItem="cR4-a4-wec" firstAttribute="centerX" secondItem="r4s-IE-yjL" secondAttribute="centerX" id="eqT-Oe-aou"/>
-                                        <constraint firstItem="75J-Ol-sUo" firstAttribute="height" secondItem="MQR-ay-0uQ" secondAttribute="height" id="fAs-nh-iM7"/>
                                         <constraint firstItem="tIy-lJ-Mvo" firstAttribute="top" secondItem="g28-Uf-BVs" secondAttribute="bottom" constant="5" id="gPi-pP-0UQ"/>
                                         <constraint firstItem="Zg9-lE-doa" firstAttribute="centerY" secondItem="kjd-Ig-BJ1" secondAttribute="centerY" id="lU0-sY-dZu"/>
-                                        <constraint firstItem="75J-Ol-sUo" firstAttribute="width" secondItem="MQR-ay-0uQ" secondAttribute="width" id="mvC-Ea-qCS"/>
                                         <constraint firstItem="uOM-k4-WKm" firstAttribute="centerY" secondItem="tIy-lJ-Mvo" secondAttribute="centerY" id="nrA-nS-Kiw"/>
                                         <constraint firstItem="MQR-ay-0uQ" firstAttribute="centerX" secondItem="r4s-IE-yjL" secondAttribute="centerX" id="rD3-Qh-69Z"/>
                                     </constraints>
@@ -481,7 +471,6 @@
                                     <outlet property="ContentLabel" destination="cR4-a4-wec" id="g5A-hh-Da1"/>
                                     <outlet property="JokboImage" destination="MQR-ay-0uQ" id="sPR-hB-UxC"/>
                                     <outlet property="PageControl" destination="kDF-P6-HUM" id="C31-QP-sF8"/>
-                                    <outlet property="RefreshBtn" destination="75J-Ol-sUo" id="k4l-AZ-AoK"/>
                                     <outlet property="slideScroll" destination="Xy1-px-I1i" id="PWK-4c-OxM"/>
                                 </connections>
                             </tableViewCell>
@@ -489,7 +478,7 @@
                                 <rect key="frame" x="0.0" y="591" width="320" height="64"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O10-58-P55" id="xvg-ZM-pfX">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-mydata(g)" translatesAutoresizingMaskIntoConstraints="NO" id="OGj-c1-b4M">
